Exercise 3 setup